--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,25 @@
 {
-    "name": "laravel/laravel",
+    "name": "notra/admin",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "Notrac Admin CMS",
+    "keywords": ["notrac", "cms", "framework", "laravel"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
+        "guzzlehttp/guzzle": "^7.5",
+        "laravel/framework": "^9.38",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "barryvdh/laravel-ide-helper": "^2.12",
+        "fakerphp/faker": "^1.20",
+        "laravel/pint": "^1.2",
+        "laravel/sail": "^v1.16",
+        "mockery/mockery": "^1.5",
+        "nunomaduro/collision": "^6.3",
+        "phpunit/phpunit": "^9.5.26",
+        "spatie/laravel-ignition": "^1.6"
     },
     "autoload": {
         "psr-4": {
@@ -38,7 +39,12 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan clear-compiled",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta",
+            "@php artisan ide-helper:models -N"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
