--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.20",
+        "laravel/breeze": "^1.14",
         "laravel/pint": "^1.2",
         "laravel/sail": "^v1.16",
         "mockery/mockery": "^1.5",
