--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.6",
         "sass": "^1.56.0",
         "vite": "^3.0.0"
     },
