--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,21 @@
     "require": {
         "php": "^8.1",
         "ext-pdo": "*",
-        "guzzlehttp/guzzle": "^7.5",
-        "laravel/framework": "^9.38",
-        "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "guzzlehttp/guzzle": "^7.5.0",
+        "laravel/framework": "^v9.39.0",
+        "laravel/sanctum": "^v3.0.1",
+        "laravel/tinker": "^v2.7.2"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.12",
-        "fakerphp/faker": "^1.20",
-        "laravel/breeze": "^1.14",
-        "laravel/pint": "^1.2",
-        "laravel/sail": "^v1.16",
-        "mockery/mockery": "^1.5",
-        "nunomaduro/collision": "^6.3",
+        "barryvdh/laravel-ide-helper": "^v2.12.3",
+        "fakerphp/faker": "^v1.20.0",
+        "laravel/breeze": "^v1.14.3",
+        "laravel/pint": "^v1.2.0",
+        "laravel/sail": "^v1.16.2",
+        "mockery/mockery": "^1.5.1",
+        "nunomaduro/collision": "^v6.3.1",
         "phpunit/phpunit": "^9.5.26",
-        "spatie/laravel-ignition": "^1.6"
+        "spatie/laravel-ignition": "^1.6.1"
     },
     "autoload": {
         "psr-4": {
