--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "ext-pdo": "*",
         "guzzlehttp/guzzle": "^7.5.0",
         "laravel/framework": "^v9.39.0",
-        "laravel/tinker": "^v2.7.2"
+        "laravel/tinker": "^v2.7.2",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^v2.12.3",
