--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
-APP_NAME=Laravel
+APP_NAME="Notrac Admin"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://notrac-admin.local
 
 LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
+LOG_DEPRECATIONS_CHANNEL=${LOG_CHANNEL}
 LOG_LEVEL=debug
+LOG_DAILY_DAYS=28
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=database.example.com
 DB_PORT=3306
-DB_DATABASE=notrac_admin
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -21,38 +22,39 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+#SESSION_SECURE_COOKIE=
 
-MEMCACHED_HOST=127.0.0.1
+#MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+#REDIS_HOST=127.0.0.1
+#REDIS_PASSWORD=null
+#REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.example.com
+MAIL_PORT=2525
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+#AWS_ACCESS_KEY_ID=
+#AWS_SECRET_ACCESS_KEY=
+#AWS_DEFAULT_REGION=us-east-1
+#AWS_BUCKET=
+#AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+#PUSHER_APP_ID=
+#PUSHER_APP_KEY=
+#PUSHER_APP_SECRET=
+#PUSHER_HOST=
+#PUSHER_PORT=443
+#PUSHER_SCHEME=https
+#PUSHER_APP_CLUSTER=mt1
 
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+#VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+#VITE_PUSHER_HOST="${PUSHER_HOST}"
+#VITE_PUSHER_PORT="${PUSHER_PORT}"
+#VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+#VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
