--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.5.0",
         "laravel/framework": "^v9.39.0",
         "laravel/tinker": "^v2.7.2",
+        "opcodesio/log-viewer": "^1.6",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-sluggable": "^3.4"
     },
