--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         "guzzlehttp/guzzle": "^7.5.0",
         "laravel/framework": "^v9.39.0",
         "laravel/tinker": "^v2.7.2",
-        "opcodesio/log-viewer": "^1.6",
-        "spatie/laravel-permission": "^5.5",
-        "spatie/laravel-sluggable": "^3.4"
+        "opcodesio/log-viewer": "^v1.6.5",
+        "spatie/laravel-permission": "^5.5.16",
+        "spatie/laravel-sluggable": "^3.4.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^v2.12.3",
