Added Spatie Honeypot

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,11 @@ MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+HONEYPOT_ENABLED=true
+HONEYPOT_NAME=notrac-admin-field
+HONEYPOT_RANDOMIZE=true
+HONEYPOT_SECONDS=2
+
 #AWS_ACCESS_KEY_ID=
 #AWS_SECRET_ACCESS_KEY=
 #AWS_DEFAULT_REGION=us-east-1
