--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.5.0",
         "laravel/framework": "^v9.39.0",
         "laravel/tinker": "^v2.7.2",
+        "laravelcollective/html": "^6.3",
         "opcodesio/log-viewer": "^v1.6.5",
         "spatie/laravel-honeypot": "^4.3",
         "spatie/laravel-permission": "^5.5.16",
