--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,18 @@
         "php": "^8.1",
         "ext-pdo": "*",
         "guzzlehttp/guzzle": "^7.5.0",
-        "laravel/framework": "^v9.39.0",
-        "laravel/tinker": "^v2.7.2",
-        "laravelcollective/html": "^6.3",
-        "opcodesio/log-viewer": "^v1.6.5",
-        "spatie/laravel-honeypot": "^4.3",
-        "spatie/laravel-permission": "^5.5.16",
+        "laravel/framework": "^v9.40.1.0",
+        "laravel/tinker": "^v2.7.3",
+        "laravelcollective/html": "^v6.3.0",
+        "opcodesio/log-viewer": "^v1.7.1",
+        "spatie/laravel-honeypot": "^4.3.1",
+        "spatie/laravel-permission": "^5.6.0",
         "spatie/laravel-sluggable": "^3.4.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^v2.12.3",
         "fakerphp/faker": "^v1.20.0",
-        "laravel/breeze": "^v1.14.3",
+        "laravel/breeze": "^v1.15.1",
         "laravel/pint": "^v1.2.0",
         "laravel/sail": "^v1.16.2",
         "mockery/mockery": "^1.5.1",
