--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
-        "axios": "^1.1.3",
-        "laravel-vite-plugin": "^0.7.0",
+        "axios": "^1.2.0",
+        "laravel-vite-plugin": "^0.7.1",
         "lodash": "^4.17.21",
-        "postcss": "^8.4.18",
+        "postcss": "^8.4.19",
         "sass": "^1.56.1",
-        "vite": "^3.2.3"
+        "vite": "^3.2.4"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.6",
-        "bootstrap": "^5.2.2",
-        "bootstrap-icons": "^1.9.1"
+        "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.10.2",
+        "quill": "^1.3.7"
     }
 }
