added Spatie Media Library

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,9 @@ HONEYPOT_NAME=notrac-admin-field
 HONEYPOT_RANDOMIZE=true
 HONEYPOT_SECONDS=2
 
+MEDIA_DISK=media
+MEDIA_PREFIX=library
+
 #AWS_ACCESS_KEY_ID=
 #AWS_SECRET_ACCESS_KEY=
 #AWS_DEFAULT_REGION=us-east-1
