--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,21 @@
         "php": "^8.1",
         "ext-pdo": "*",
         "guzzlehttp/guzzle": "^7.5.0",
-        "laravel/framework": "^v9.40.1.0",
+        "laravel/framework": "^v9.41.0",
         "laravel/tinker": "^v2.7.3",
         "laravelcollective/html": "^v6.3.0",
-        "opcodesio/log-viewer": "^v1.7.1",
+        "opcodesio/log-viewer": "^v1.7.2",
         "spatie/laravel-honeypot": "^4.3.1",
+        "spatie/laravel-medialibrary": "^10.7.2",
         "spatie/laravel-permission": "^5.7.0",
         "spatie/laravel-sluggable": "^3.4.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^v2.12.3",
         "fakerphp/faker": "^v1.20.0",
-        "laravel/breeze": "^v1.15.1",
+        "laravel/breeze": "^v1.15.2",
         "laravel/pint": "^v1.2.0",
-        "laravel/sail": "^v1.16.2",
+        "laravel/sail": "^v1.16.3",
         "mockery/mockery": "^1.5.1",
         "nunomaduro/collision": "^v6.3.1",
         "phpunit/phpunit": "^9.5.26",
