--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@popperjs/core": "^2.11.6",
         "bootstrap": "^5.2.3",
         "bootstrap-icons": "^1.10.2",
+        "chocolat": "^1.1.0",
         "dropzone": "^6.0.0-beta.2",
         "quill": "^1.3.7"
     }
