--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,16 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
+      
+    - name: Use Node.js 18
+      uses: actions/setup-node@v2
+      with:
+        node-version: 'v18.14.0'
+      
+    - name: 🔨 Build Project
+      run: |
+        npm install
+        npm run build      
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
@@ -17,4 +27,4 @@ jobs:
         server: ${{ secrets.FTP_NOTRAC_ADMIN_HOST }}
         username: ${{ secrets.FTP_NOTRAC_ADMIN_USER }}
         password: ${{ secrets.FTP_NOTRAC_ADMIN_PASSWORD }}
-        dry-run: false
+        dry-run: true
