--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: 🚀 Deploy website on push
-on: 
+on:
   push:
-    branches: 
+    branches:
     - master
 jobs:
   web-deploy:
@@ -12,21 +12,23 @@ jobs:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
 
-    - name: Use Composer (php-actions)
+    - name: Install Composer dependencies
       uses: php-actions/composer@v6
       with:
+        php_extensions: redis exif
+        version: 2.x
         dev: no
-      
+
     - name: Use Node.js 18
       uses: actions/setup-node@v2
       with:
         node-version: 'v18.14.0'
-      
+
     - name: 🔨 Build Project
       run: |
         npm install
-        npm run build      
-    
+        npm run build
+
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
