--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
+# Environment files
 .env
 .env.backup
 .env.production
+
+# Project info & IDE settings
+/..info/
+/.fleet
+/.idea
+/.vscode
 .phpunit.result.cache
+.phpstorm.meta.php
+_ide_helper.php
+_ide_helper_models.php
 Homestead.json
 Homestead.yaml
 auth.json
 npm-debug.log
 yarn-error.log
-/.fleet
-/.idea
-/.vscode
-/.phpstorm.meta.php
-/_ide_helper.php
-/_ide_helper_models.php
-/.info/
+
+# External assets
+/node_modules
+/vendor
+
+# Public files
+/public/build
+/public/hot
 /public/media/library/
+/public/storage
+
+# Storage files
+/storage/*.key
 /storage/media-library/temp/
